# shorturl

./: .env  Containerfile  README.md
.github/workflows/: docker.yml
url-shortener/: .gitignore  Cargo.toml  README.md
url-shortener/migrations/: schema.sql
url-shortener/src/: db.rs  main.rs  models.rs  routes.rs  utils.rs
