[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = { version = "0.15" }
